--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "projen": "npx projen"
   },
   "author": {
-    "name": "Madeline Kusters",
-    "email": "mkusters@amazon.com",
+    "name": "Amazon Web Services, Inc.",
     "organization": false
   },
   "devDependencies": {
@@ -39,7 +38,7 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.0.0",
     "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -59,7 +58,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
+    "aws-cdk-lib": "^2.0.0",
     "constructs": "^10.0.5"
   },
   "keywords": [
