--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,12 @@ junit.xml
 .jsii
 tsconfig.json
 !/API.md
+test/.tmp
+test/awscli-layer.integ.snapshot/asset.*
+test/awscli-layer.integ.snapshot/**/asset.*
+test/awscli-layer.integ.snapshot/cdk.out
+test/awscli-layer.integ.snapshot/**/cdk.out
+test/awscli-layer.integ.snapshot/manifest.json
+test/awscli-layer.integ.snapshot/**/manifest.json
+test/awscli-layer.integ.snapshot/tree.json
+test/awscli-layer.integ.snapshot/**/tree.json
