--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awscdk-lambda-layer-awscli-v1",
+  "name": "@aws-cdk/lambda-layer-awscli-v1",
   "repository": {
     "type": "git",
     "url": "git@github.com:cdklabs/awscdk-lambda-layer-awscli-v1.git"
