--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,14 @@ jobs:
       CI: "true"
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
       - name: Install dependencies
         run: yarn install --check-files
       - name: build
+        uses: 
         run: npx projen build
       - id: self_mutation
         name: Find mutations
