--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,10 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
       - name: Install dependencies
         run: yarn install --check-files
-      - name: Setup docker buildx
+      - name: Build the docker image
         id: buildx
-        uses: docker/setup-buildx-action@v2
+        uses: actions/checkout@v3
+        run: docker build -t aws-lambda-layer ./layer
       - name: build
         run: npx projen build
       - id: self_mutation
