--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: yarn install --check-files
       - name: Build the docker image
         id: buildx
-        run: docker build -t aws-lambda-layer ./layer
+        run: docker build . --file ./layer/Dockerfile --tag my-image-name:$(date +%s)
       - name: build
         run: npx projen build
       - id: self_mutation
