--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
       - name: Install dependencies
         run: yarn install --check-files
+      - name: add docker permissions
+        run: sudo chown superchain /var/run/docker.sock
       - name: Build the docker image
         id: buildx
         run: docker build . --file ./layer/Dockerfile --tag my-image-name:$(date +%s)
