--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,10 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
+      - name: Change permissions on /var/run/docker.sock
+        run: sudo chown superchain /var/run/docker.sock
       - name: Install dependencies
         run: yarn install --check-files
-      - name: add docker permissions
-        run: sudo chown superchain /var/run/docker.sock
       - name: build
         run: npx projen build
       - id: self_mutation
