--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "lambda-layer-awscli-v1",
+  "description": "An AWS Lambda layer that contains the AWS CLI",
   "repository": {
     "type": "git",
     "url": "git@github.com:cdklabs/awscdk-lambda-layer-awscli-v1.git"
@@ -46,7 +47,6 @@
     "@typescript-eslint/parser": "^5",
     "aws-cdk": "^2",
     "aws-cdk-lib": "2.0.0",
-    "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^3.5.0",
@@ -66,8 +66,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.0.0",
-    "constructs": "^10.0.5"
+    "aws-cdk-lib": "^2.0.0"
   },
   "keywords": [
     "cdk"
