--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "docgen": "npx projen docgen",
     "eject": "npx projen eject",
     "eslint": "npx projen eslint",
-    "integ:awscli-layer:assert": "npx projen integ:awscli-layer:assert",
-    "integ:awscli-layer:deploy": "npx projen integ:awscli-layer:deploy",
-    "integ:awscli-layer:destroy": "npx projen integ:awscli-layer:destroy",
-    "integ:awscli-layer:snapshot": "npx projen integ:awscli-layer:snapshot",
-    "integ:awscli-layer:watch": "npx projen integ:awscli-layer:watch",
+    "integ:awscli-code:assert": "npx projen integ:awscli-code:assert",
+    "integ:awscli-code:deploy": "npx projen integ:awscli-code:deploy",
+    "integ:awscli-code:destroy": "npx projen integ:awscli-code:destroy",
+    "integ:awscli-code:snapshot": "npx projen integ:awscli-code:snapshot",
+    "integ:awscli-code:watch": "npx projen integ:awscli-code:watch",
     "integ:snapshot-all": "npx projen integ:snapshot-all",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
@@ -47,7 +47,7 @@
     "@typescript-eslint/parser": "^5",
     "aws-cdk": "^2",
     "aws-cdk-lib": "2.0.0",
-    "constructs": "^10.1.92",
+    "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^3.5.0",
