--- a/.gitignore
+++ b/.gitignore
@@ -52,11 +52,11 @@ junit.xml
 tsconfig.json
 !/API.md
 test/.tmp
-test/awscli-code.integ.snapshot/asset.*
-test/awscli-code.integ.snapshot/**/asset.*
-test/awscli-code.integ.snapshot/cdk.out
-test/awscli-code.integ.snapshot/**/cdk.out
-test/awscli-code.integ.snapshot/manifest.json
-test/awscli-code.integ.snapshot/**/manifest.json
-test/awscli-code.integ.snapshot/tree.json
-test/awscli-code.integ.snapshot/**/tree.json
+test/awscli-asset.integ.snapshot/asset.*
+test/awscli-asset.integ.snapshot/**/asset.*
+test/awscli-asset.integ.snapshot/cdk.out
+test/awscli-asset.integ.snapshot/**/cdk.out
+test/awscli-asset.integ.snapshot/manifest.json
+test/awscli-asset.integ.snapshot/**/manifest.json
+test/awscli-asset.integ.snapshot/tree.json
+test/awscli-asset.integ.snapshot/**/tree.json
