--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -130,66 +130,66 @@
         }
       ]
     },
-    "integ:awscli-code:assert": {
-      "name": "integ:awscli-code:assert",
-      "description": "assert the snapshot of integration test 'awscli-code'",
+    "integ:awscli-asset:assert": {
+      "name": "integ:awscli-asset:assert",
+      "description": "assert the snapshot of integration test 'awscli-asset'",
       "steps": [
         {
-          "exec": "[ -d \"test/awscli-code.integ.snapshot\" ] || (echo \"No snapshot available for integration test 'awscli-code'. Run 'projen integ:awscli-code:deploy' to capture.\" && exit 1)"
+          "exec": "[ -d \"test/awscli-asset.integ.snapshot\" ] || (echo \"No snapshot available for integration test 'awscli-asset'. Run 'projen integ:awscli-asset:deploy' to capture.\" && exit 1)"
         },
         {
-          "exec": "cdk synth --app \"ts-node -P tsconfig.dev.json test/awscli-code.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata -o test/.tmp/awscli-code.integ/assert.cdk.out > /dev/null"
+          "exec": "cdk synth --app \"ts-node -P tsconfig.dev.json test/awscli-asset.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata -o test/.tmp/awscli-asset.integ/assert.cdk.out > /dev/null"
         },
         {
-          "exec": "diff -r -x asset.* -x cdk.out -x manifest.json -x tree.json test/awscli-code.integ.snapshot/ test/.tmp/awscli-code.integ/assert.cdk.out/"
+          "exec": "diff -r -x asset.* -x cdk.out -x manifest.json -x tree.json test/awscli-asset.integ.snapshot/ test/.tmp/awscli-asset.integ/assert.cdk.out/"
         }
       ]
     },
-    "integ:awscli-code:deploy": {
-      "name": "integ:awscli-code:deploy",
-      "description": "deploy integration test 'awscli-code' and capture snapshot",
+    "integ:awscli-asset:deploy": {
+      "name": "integ:awscli-asset:deploy",
+      "description": "deploy integration test 'awscli-asset' and capture snapshot",
       "steps": [
         {
-          "exec": "rm -fr test/.tmp/awscli-code.integ/deploy.cdk.out"
+          "exec": "rm -fr test/.tmp/awscli-asset.integ/deploy.cdk.out"
         },
         {
-          "exec": "cdk deploy --app \"ts-node -P tsconfig.dev.json test/awscli-code.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata '**' --require-approval=never -o test/.tmp/awscli-code.integ/deploy.cdk.out"
+          "exec": "cdk deploy --app \"ts-node -P tsconfig.dev.json test/awscli-asset.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata '**' --require-approval=never -o test/.tmp/awscli-asset.integ/deploy.cdk.out"
         },
         {
-          "exec": "rm -fr test/awscli-code.integ.snapshot"
+          "exec": "rm -fr test/awscli-asset.integ.snapshot"
         },
         {
-          "exec": "mv test/.tmp/awscli-code.integ/deploy.cdk.out test/awscli-code.integ.snapshot"
+          "exec": "mv test/.tmp/awscli-asset.integ/deploy.cdk.out test/awscli-asset.integ.snapshot"
         },
         {
-          "spawn": "integ:awscli-code:destroy"
+          "spawn": "integ:awscli-asset:destroy"
         }
       ]
     },
-    "integ:awscli-code:destroy": {
-      "name": "integ:awscli-code:destroy",
-      "description": "destroy integration test 'awscli-code'",
+    "integ:awscli-asset:destroy": {
+      "name": "integ:awscli-asset:destroy",
+      "description": "destroy integration test 'awscli-asset'",
       "steps": [
         {
-          "exec": "cdk destroy --app test/awscli-code.integ.snapshot '**' --no-version-reporting"
+          "exec": "cdk destroy --app test/awscli-asset.integ.snapshot '**' --no-version-reporting"
         }
       ]
     },
-    "integ:awscli-code:snapshot": {
-      "name": "integ:awscli-code:snapshot",
-      "description": "update snapshot for integration test \"awscli-code\"",
+    "integ:awscli-asset:snapshot": {
+      "name": "integ:awscli-asset:snapshot",
+      "description": "update snapshot for integration test \"awscli-asset\"",
       "steps": [
         {
-          "exec": "cdk synth --app \"ts-node -P tsconfig.dev.json test/awscli-code.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata -o test/awscli-code.integ.snapshot > /dev/null"
+          "exec": "cdk synth --app \"ts-node -P tsconfig.dev.json test/awscli-asset.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata -o test/awscli-asset.integ.snapshot > /dev/null"
         }
       ]
     },
-    "integ:awscli-code:watch": {
-      "name": "integ:awscli-code:watch",
-      "description": "watch integration test 'awscli-code' (without updating snapshots)",
+    "integ:awscli-asset:watch": {
+      "name": "integ:awscli-asset:watch",
+      "description": "watch integration test 'awscli-asset' (without updating snapshots)",
       "steps": [
         {
-          "exec": "cdk watch --app \"ts-node -P tsconfig.dev.json test/awscli-code.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata '**' -o test/.tmp/awscli-code.integ/deploy.cdk.out"
+          "exec": "cdk watch --app \"ts-node -P tsconfig.dev.json test/awscli-asset.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata '**' -o test/.tmp/awscli-asset.integ/deploy.cdk.out"
         }
       ]
     },
@@ -198,7 +198,7 @@
       "description": "update snapshot for all integration tests",
       "steps": [
         {
-          "spawn": "integ:awscli-code:snapshot"
+          "spawn": "integ:awscli-asset:snapshot"
         }
       ]
     },
@@ -286,7 +286,7 @@
           "spawn": "eslint"
         },
         {
-          "spawn": "integ:awscli-code:assert"
+          "spawn": "integ:awscli-asset:assert"
         }
       ]
     },
@@ -335,19 +335,19 @@
           "exec": "yarn upgrade npm-check-updates"
         },
         {
-          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='aws-cdk-lib'"
+          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='aws-cdk-lib,constructs'"
         },
         {
-          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='aws-cdk-lib'"
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='aws-cdk-lib,constructs'"
         },
         {
-          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='aws-cdk-lib'"
+          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='aws-cdk-lib,constructs'"
         },
         {
-          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='aws-cdk-lib'"
+          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='aws-cdk-lib,constructs'"
         },
         {
-          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='aws-cdk-lib'"
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='aws-cdk-lib,constructs'"
         },
         {
           "exec": "yarn install --check-files"
