--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "lambda-layer-awscli-v1",
+  "name": "awscdk-asset-awscli-v1",
+  "description": "An Asset construct that contains the AWS CLI, for use in Lambda Layers",
   "repository": {
     "type": "git",
-    "url": "git@github.com:cdklabs/awscdk-lambda-layer-awscli-v1.git"
+    "url": "git@github.com:cdklabs/awscdk-asset-awscli.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -14,11 +15,11 @@
     "docgen": "npx projen docgen",
     "eject": "npx projen eject",
     "eslint": "npx projen eslint",
-    "integ:awscli-layer:assert": "npx projen integ:awscli-layer:assert",
-    "integ:awscli-layer:deploy": "npx projen integ:awscli-layer:deploy",
-    "integ:awscli-layer:destroy": "npx projen integ:awscli-layer:destroy",
-    "integ:awscli-layer:snapshot": "npx projen integ:awscli-layer:snapshot",
-    "integ:awscli-layer:watch": "npx projen integ:awscli-layer:watch",
+    "integ:awscli-asset:assert": "npx projen integ:awscli-asset:assert",
+    "integ:awscli-asset:deploy": "npx projen integ:awscli-asset:deploy",
+    "integ:awscli-asset:destroy": "npx projen integ:awscli-asset:destroy",
+    "integ:awscli-asset:snapshot": "npx projen integ:awscli-asset:snapshot",
+    "integ:awscli-asset:watch": "npx projen integ:awscli-asset:watch",
     "integ:snapshot-all": "npx projen integ:snapshot-all",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
@@ -74,6 +75,7 @@
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
+  "homepage": "https://github.com/cdklabs/awscdk-asset-awscli#readme",
   "version": "0.0.0",
   "jest": {
     "testMatch": [
