--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -130,66 +130,66 @@
         }
       ]
     },
-    "integ:awscli-layer:assert": {
-      "name": "integ:awscli-layer:assert",
-      "description": "assert the snapshot of integration test 'awscli-layer'",
+    "integ:awscli-asset:assert": {
+      "name": "integ:awscli-asset:assert",
+      "description": "assert the snapshot of integration test 'awscli-asset'",
       "steps": [
         {
-          "exec": "[ -d \"test/awscli-layer.integ.snapshot\" ] || (echo \"No snapshot available for integration test 'awscli-layer'. Run 'projen integ:awscli-layer:deploy' to capture.\" && exit 1)"
+          "exec": "[ -d \"test/awscli-asset.integ.snapshot\" ] || (echo \"No snapshot available for integration test 'awscli-asset'. Run 'projen integ:awscli-asset:deploy' to capture.\" && exit 1)"
         },
         {
-          "exec": "cdk synth --app \"ts-node -P tsconfig.dev.json test/awscli-layer.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata -o test/.tmp/awscli-layer.integ/assert.cdk.out > /dev/null"
+          "exec": "cdk synth --app \"ts-node -P tsconfig.dev.json test/awscli-asset.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata -o test/.tmp/awscli-asset.integ/assert.cdk.out > /dev/null"
         },
         {
-          "exec": "diff -r -x asset.* -x cdk.out -x manifest.json -x tree.json test/awscli-layer.integ.snapshot/ test/.tmp/awscli-layer.integ/assert.cdk.out/"
+          "exec": "diff -r -x asset.* -x cdk.out -x manifest.json -x tree.json test/awscli-asset.integ.snapshot/ test/.tmp/awscli-asset.integ/assert.cdk.out/"
         }
       ]
     },
-    "integ:awscli-layer:deploy": {
-      "name": "integ:awscli-layer:deploy",
-      "description": "deploy integration test 'awscli-layer' and capture snapshot",
+    "integ:awscli-asset:deploy": {
+      "name": "integ:awscli-asset:deploy",
+      "description": "deploy integration test 'awscli-asset' and capture snapshot",
       "steps": [
         {
-          "exec": "rm -fr test/.tmp/awscli-layer.integ/deploy.cdk.out"
+          "exec": "rm -fr test/.tmp/awscli-asset.integ/deploy.cdk.out"
         },
         {
-          "exec": "cdk deploy --app \"ts-node -P tsconfig.dev.json test/awscli-layer.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata '**' --require-approval=never -o test/.tmp/awscli-layer.integ/deploy.cdk.out"
+          "exec": "cdk deploy --app \"ts-node -P tsconfig.dev.json test/awscli-asset.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata '**' --require-approval=never -o test/.tmp/awscli-asset.integ/deploy.cdk.out"
         },
         {
-          "exec": "rm -fr test/awscli-layer.integ.snapshot"
+          "exec": "rm -fr test/awscli-asset.integ.snapshot"
         },
         {
-          "exec": "mv test/.tmp/awscli-layer.integ/deploy.cdk.out test/awscli-layer.integ.snapshot"
+          "exec": "mv test/.tmp/awscli-asset.integ/deploy.cdk.out test/awscli-asset.integ.snapshot"
         },
         {
-          "spawn": "integ:awscli-layer:destroy"
+          "spawn": "integ:awscli-asset:destroy"
         }
       ]
     },
-    "integ:awscli-layer:destroy": {
-      "name": "integ:awscli-layer:destroy",
-      "description": "destroy integration test 'awscli-layer'",
+    "integ:awscli-asset:destroy": {
+      "name": "integ:awscli-asset:destroy",
+      "description": "destroy integration test 'awscli-asset'",
       "steps": [
         {
-          "exec": "cdk destroy --app test/awscli-layer.integ.snapshot '**' --no-version-reporting"
+          "exec": "cdk destroy --app test/awscli-asset.integ.snapshot '**' --no-version-reporting"
         }
       ]
     },
-    "integ:awscli-layer:snapshot": {
-      "name": "integ:awscli-layer:snapshot",
-      "description": "update snapshot for integration test \"awscli-layer\"",
+    "integ:awscli-asset:snapshot": {
+      "name": "integ:awscli-asset:snapshot",
+      "description": "update snapshot for integration test \"awscli-asset\"",
       "steps": [
         {
-          "exec": "cdk synth --app \"ts-node -P tsconfig.dev.json test/awscli-layer.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata -o test/awscli-layer.integ.snapshot > /dev/null"
+          "exec": "cdk synth --app \"ts-node -P tsconfig.dev.json test/awscli-asset.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata -o test/awscli-asset.integ.snapshot > /dev/null"
         }
       ]
     },
-    "integ:awscli-layer:watch": {
-      "name": "integ:awscli-layer:watch",
-      "description": "watch integration test 'awscli-layer' (without updating snapshots)",
+    "integ:awscli-asset:watch": {
+      "name": "integ:awscli-asset:watch",
+      "description": "watch integration test 'awscli-asset' (without updating snapshots)",
       "steps": [
         {
-          "exec": "cdk watch --app \"ts-node -P tsconfig.dev.json test/awscli-layer.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata '**' -o test/.tmp/awscli-layer.integ/deploy.cdk.out"
+          "exec": "cdk watch --app \"ts-node -P tsconfig.dev.json test/awscli-asset.integ.ts\" --no-version-reporting --no-asset-metadata --no-path-metadata '**' -o test/.tmp/awscli-asset.integ/deploy.cdk.out"
         }
       ]
     },
@@ -198,7 +198,7 @@
       "description": "update snapshot for all integration tests",
       "steps": [
         {
-          "spawn": "integ:awscli-layer:snapshot"
+          "spawn": "integ:awscli-asset:snapshot"
         }
       ]
     },
@@ -286,7 +286,7 @@
           "spawn": "eslint"
         },
         {
-          "spawn": "integ:awscli-layer:assert"
+          "spawn": "integ:awscli-asset:assert"
         }
       ]
     },
