fix: add patches to enable sudo commands for upgrade-main and release workflows

--- a/.github/workflows/upgrade-main.yml
+++ b/.github/workflows/upgrade-main.yml
@@ -37,6 +37,7 @@ jobs:
           path: .repo.patch
     container:
       image: jsii/superchain:1-buster-slim-node14
+      options: --group-add sudo
   pr:
     name: Create Pull Request
     needs: upgrade
