--- a/package.json
+++ b/package.json
@@ -129,10 +129,10 @@
     "outdir": "dist",
     "targets": {
       "java": {
-        "package": "software.amazon.awscdk.asset.awscli.v1",
+        "package": "software.amazon.awscdk.cdk-asset-awscli-v1",
         "maven": {
           "groupId": "software.amazon.awscdk",
-          "artifactId": "asset-awscli-v1"
+          "artifactId": "cdk-asset-awscli-v1"
         }
       },
       "python": {
@@ -140,8 +140,8 @@
         "module": "aws_cdk.asset_awscli_v1"
       },
       "dotnet": {
-        "namespace": "Amazon.CDK.AssetAwscliV1",
-        "packageId": "Amazon.CDK.AssetAwscliV1"
+        "namespace": "Amazon.CDK.Asset.AwsCliV1",
+        "packageId": "Amazon.CDK.Asset.AwsCliV1"
       }
     },
     "tsc": {
