--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:dotnet": "npx projen package:dotnet",
+    "package:go": "npx projen package:go",
     "package:java": "npx projen package:java",
     "package:js": "npx projen package:js",
     "package:python": "npx projen package:python",
@@ -142,6 +143,9 @@
       "dotnet": {
         "namespace": "Amazon.CDK.Asset.AwsCliV1",
         "packageId": "Amazon.CDK.Asset.AwsCliV1"
+      },
+      "go": {
+        "moduleName": "github.com/cdklabs/awscdk-asset-awscli-go"
       }
     },
     "tsc": {
