--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -228,6 +228,6 @@ jobs:
       - name: Release
         run: npx -p publib@latest publib-golang
         env:
-          GIT_USER_NAME: github-actions
-          GIT_USER_EMAIL: github-actions@github.com
-          GITHUB_TOKEN: ${{ secrets.GO_GITHUB_TOKEN }}
+          GIT_USER_NAME: cdklabs-automation
+          GIT_USER_EMAIL: cdklabs-automation@amazon.com
+          GITHUB_TOKEN: ${{ secrets.CDKLABS_GO_GITHUB_TOKEN }}
