--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -228,6 +228,6 @@ jobs:
       - name: Release
         run: npx -p publib@latest publib-golang
         env:
-          GIT_USER_NAME: aws-cdk-automation
+          GIT_USER_NAME: AWS CDK Team
           GIT_USER_EMAIL: aws-cdk-dev@amazon.com
           GITHUB_TOKEN: ${{ secrets.GO_GITHUB_TOKEN }}
