--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -230,4 +230,4 @@ jobs:
         env:
           GIT_USER_NAME: AWS CDK Team
           GIT_USER_EMAIL: aws-cdk@amazon.com
-          GITHUB_TOKEN: ${{ secrets.GO_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PROJEN_GITHUB_TOKEN }}
