--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -32,7 +32,7 @@
         "CHANGELOG": "dist/changelog.md",
         "BUMPFILE": "dist/version.txt",
         "RELEASETAG": "dist/releasetag.txt",
-        "RELEASE_TAG_PREFIX": ""
+        "RELEASE_TAG_PREFIX": "awscli-v1"
       },
       "steps": [
         {
@@ -299,11 +299,12 @@
         }
       ]
     },
-    "release": {
-      "name": "release",
-      "description": "Prepare a release from \"main\" branch",
+    "release:awscli-v1/main": {
+      "name": "release:awscli-v1/main",
+      "description": "Prepare a release from \"awscli-v1/main\" branch",
       "env": {
-        "RELEASE": "true"
+        "RELEASE": "true",
+        "RELEASE_TAG_PREFIX": "awscli-v1"
       },
       "steps": [
         {
@@ -364,7 +365,7 @@
         "CHANGELOG": "dist/changelog.md",
         "BUMPFILE": "dist/version.txt",
         "RELEASETAG": "dist/releasetag.txt",
-        "RELEASE_TAG_PREFIX": ""
+        "RELEASE_TAG_PREFIX": "awscli-v1"
       },
       "steps": [
         {
