--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
-    "release": "npx projen release",
+    "release:awscli-v1/main": "npx projen release:awscli-v1/main",
     "test": "npx projen test",
     "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
@@ -145,8 +145,7 @@
         "packageId": "Amazon.CDK.Asset.AwsCliV1"
       },
       "go": {
-        "moduleName": "github.com/cdklabs/awscdk-asset-awscli-go",
-        "packageName": "awscliv1"
+        "moduleName": "github.com/cdklabs/awscdk-asset-awscli-go"
       }
     },
     "tsc": {
