--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -304,6 +304,7 @@
       "description": "Prepare a release from \"awscli-v1/main\" branch",
       "env": {
         "RELEASE": "true",
+        "MAJOR": "2",
         "RELEASE_TAG_PREFIX": "awscli-v1"
       },
       "steps": [
