--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-cdk/asset-awscli-v1",
-  "description": "A library that contains the AWS CLI, as an AssetSource, for use in Lambda Layers",
+  "description": "A library that contains the AWS CLI for use in Lambda Layers",
   "repository": {
     "type": "git",
     "url": "https://github.com/cdklabs/awscdk-asset-awscli.git"
