--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-cdk/asset-awscli-v1",
-  "description": "An Asset construct that contains the AWS CLI, for use in Lambda Layers",
+  "description": "A library that contains the AWS CLI for use in Lambda Layers",
   "repository": {
     "type": "git",
     "url": "https://github.com/cdklabs/awscdk-asset-awscli.git"
@@ -49,8 +49,8 @@
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk": "^2",
-    "aws-cdk-lib": "2.0.0",
-    "constructs": "10.0.5",
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -68,10 +68,6 @@
     "ts-jest": "^27",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
-  },
-  "peerDependencies": {
-    "aws-cdk-lib": "^2.0.0",
-    "constructs": "^10.0.5"
   },
   "keywords": [
     "cdk"
