--- a/.github/workflows/release-awscli-v1.yml
+++ b/.github/workflows/release-awscli-v1.yml
@@ -16,6 +16,10 @@ jobs:
     env:
       CI: "true"
     steps:
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14.x
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -24,8 +28,6 @@ jobs:
         run: |-
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-      - name: Change permissions on /var/run/docker.sock
-        run: sudo chown superchain /var/run/docker.sock
       - name: Install dependencies
         run: yarn install --check-files --frozen-lockfile
       - name: release:awscli-v1/main
@@ -43,9 +45,6 @@ jobs:
         with:
           name: build-artifact
           path: dist
-    container:
-      image: jsii/superchain:1-buster-slim-node14
-      options: --group-add sudo
   release_github:
     name: Publish to GitHub Releases
     needs: release
@@ -94,8 +93,6 @@ jobs:
       - name: Restore build artifact permissions
         run: cd dist && setfacl --restore=permissions-backup.acl
         continue-on-error: true
-      - name: Change permissions on /var/run/docker.sock
-        run: sudo chown superchain /var/run/docker.sock
       - name: Prepare Repository
         run: mv dist .repo
       - name: Install Dependencies
@@ -133,8 +130,6 @@ jobs:
       - name: Restore build artifact permissions
         run: cd dist && setfacl --restore=permissions-backup.acl
         continue-on-error: true
-      - name: Change permissions on /var/run/docker.sock
-        run: sudo chown superchain /var/run/docker.sock
       - name: Prepare Repository
         run: mv dist .repo
       - name: Install Dependencies
@@ -174,8 +169,6 @@ jobs:
       - name: Restore build artifact permissions
         run: cd dist && setfacl --restore=permissions-backup.acl
         continue-on-error: true
-      - name: Change permissions on /var/run/docker.sock
-        run: sudo chown superchain /var/run/docker.sock
       - name: Prepare Repository
         run: mv dist .repo
       - name: Install Dependencies
@@ -211,8 +204,6 @@ jobs:
       - name: Restore build artifact permissions
         run: cd dist && setfacl --restore=permissions-backup.acl
         continue-on-error: true
-      - name: Change permissions on /var/run/docker.sock
-        run: sudo chown superchain /var/run/docker.sock
       - name: Prepare Repository
         run: mv dist .repo
       - name: Install Dependencies
@@ -247,8 +238,6 @@ jobs:
       - name: Restore build artifact permissions
         run: cd dist && setfacl --restore=permissions-backup.acl
         continue-on-error: true
-      - name: Change permissions on /var/run/docker.sock
-        run: sudo chown superchain /var/run/docker.sock
       - name: Prepare Repository
         run: mv dist .repo
       - name: Install Dependencies
