--- a/.gitignore
+++ b/.gitignore
@@ -51,12 +51,4 @@ junit.xml
 .jsii
 tsconfig.json
 !/API.md
-test/.tmp
-test/awscli-asset.integ.snapshot/asset.*
-test/awscli-asset.integ.snapshot/**/asset.*
-test/awscli-asset.integ.snapshot/cdk.out
-test/awscli-asset.integ.snapshot/**/cdk.out
-test/awscli-asset.integ.snapshot/manifest.json
-test/awscli-asset.integ.snapshot/**/manifest.json
-test/awscli-asset.integ.snapshot/tree.json
-test/awscli-asset.integ.snapshot/**/tree.json
+.jsii.tabl.json
