--- a/package.json
+++ b/package.json
@@ -15,12 +15,8 @@
     "docgen": "npx projen docgen",
     "eject": "npx projen eject",
     "eslint": "npx projen eslint",
-    "integ:awscli-asset:assert": "npx projen integ:awscli-asset:assert",
-    "integ:awscli-asset:deploy": "npx projen integ:awscli-asset:deploy",
-    "integ:awscli-asset:destroy": "npx projen integ:awscli-asset:destroy",
-    "integ:awscli-asset:snapshot": "npx projen integ:awscli-asset:snapshot",
-    "integ:awscli-asset:watch": "npx projen integ:awscli-asset:watch",
-    "integ:snapshot-all": "npx projen integ:snapshot-all",
+    "integ": "npx projen integ",
+    "integ:update": "npx projen integ:update",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:dotnet": "npx projen package:dotnet",
@@ -32,6 +28,7 @@
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "release:awscli-v1/main": "npx projen release:awscli-v1/main",
+    "rosetta:extract": "npx projen rosetta:extract",
     "test": "npx projen test",
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
@@ -45,11 +42,12 @@
     "organization": false
   },
   "devDependencies": {
+    "@aws-cdk/integ-runner": "^2.45.0",
+    "@aws-cdk/integ-tests-alpha": "^2.45.0-alpha.0",
     "@types/jest": "^27",
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2",
     "aws-cdk-lib": "^2.0.0",
     "constructs": "^10.0.5",
     "eslint": "^8",
