--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ junit.xml
 !/.github/workflows/release-awscli-v1.yml
 !/.mergify.yml
 !/.github/workflows/upgrade-awscli-v1-main.yml
+!/.github/workflows/upgrade-awscli-v2-main.yml
 !/.github/pull_request_template.md
 !/test/
 !/tsconfig.dev.json
