--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -254,6 +254,7 @@
       "description": "Prepare a release from \"awscli-v2/main\" branch",
       "env": {
         "RELEASE": "true",
+        "MAJOR": "2",
         "RELEASE_TAG_PREFIX": "awscli-v2"
       },
       "steps": [
