--- a/.gitattributes
+++ b/.gitattributes
@@ -5,13 +5,14 @@
 /.gitattributes linguist-generated
 /.github/pull_request_template.md linguist-generated
 /.github/workflows/auto-approve.yml linguist-generated
+/.github/workflows/auto-merge.yml linguist-generated
 /.github/workflows/build.yml linguist-generated
 /.github/workflows/pull-request-lint.yml linguist-generated
 /.github/workflows/release-awscli-v1.yml linguist-generated
 /.github/workflows/upgrade-awscli-v1-main.yml linguist-generated
 /.github/workflows/upgrade-awscli-v2-main.yml linguist-generated
+/.github/workflows/upgrade-cdklabs-projen-project-types-awscli-v1-main.yml linguist-generated
 /.gitignore linguist-generated
-/.mergify.yml linguist-generated
 /.npmignore linguist-generated
 /.npmrc linguist-generated
 /.projen/** linguist-generated
