--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ name: build
 on:
   pull_request: {}
   workflow_dispatch: {}
+  merge_group:
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,10 +17,6 @@ jobs:
     env:
       CI: "true"
     steps:
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14.x
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -26,7 +25,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 14.18.0
       - name: Install dependencies
         run: yarn install --check-files
       - name: build
@@ -95,7 +94,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 14.18.0
       - name: Download build artifacts
         uses: actions/download-artifact@v3
         with:
@@ -124,7 +123,7 @@ jobs:
           java-version: 11.x
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 14.18.0
       - name: Download build artifacts
         uses: actions/download-artifact@v3
         with:
@@ -149,7 +148,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 14.18.0
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
@@ -177,7 +176,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 14.18.0
       - uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 3.x
@@ -205,7 +204,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 14.18.0
       - uses: actions/setup-go@v3
         with:
           go-version: ^1.16.0
