--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,6 @@ junit.xml
 /dist/changelog.md
 /dist/version.txt
 !/.github/workflows/release-awscli-v1.yml
-!/.mergify.yml
 !/.github/workflows/upgrade-awscli-v1-main.yml
 !/.github/workflows/upgrade-awscli-v2-main.yml
 !/.github/pull_request_template.md
@@ -54,3 +53,6 @@ junit.xml
 tsconfig.json
 !/API.md
 .jsii.tabl.json
+!/rosetta/default.ts-fixture
+!/.github/workflows/auto-merge.yml
+!/.github/workflows/upgrade-cdklabs-projen-project-types-awscli-v1-main.yml
