--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@
 /.github/workflows/release-awscli-v1.yml linguist-generated
 /.github/workflows/upgrade-awscli-v1-main.yml linguist-generated
 /.github/workflows/upgrade-awscli-v2-main.yml linguist-generated
+/.github/workflows/upgrade-cdklabs-projen-project-types-awscli-v1-main.yml linguist-generated
 /.gitignore linguist-generated
 /.mergify.yml linguist-generated
 /.npmignore linguist-generated
