--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ junit.xml
 tsconfig.json
 !/API.md
 .jsii.tabl.json
+!/rosetta/default.ts-fixture
+!/.github/workflows/upgrade-cdklabs-projen-project-types-awscli-v1-main.yml
