--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,4 +14,5 @@ updates:
     open-pull-requests-limit: 5
     commit_message:
       prefix: "fix"
-      include_scope: true
+      prefix-development: "chore"
+      include: "scope"
