--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     labels:
       - "auto-approve"
     open-pull-requests-limit: 5
-    commit_message:
+    commit-message:
       prefix: "fix"
       prefix-development: "chore"
       include: "scope"
