fix: upgrade aws-cli to latest version (#952)
This PR doesn't actually do the upgrade, but is marked as a fix to to trigger a release.

It also changes the Dependabot config, so that in future any AWS CLI upgrades will automatically be released.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,7 @@ updates:
     labels:
       - "auto-approve"
     open-pull-requests-limit: 5
+    commit-message:
+      prefix: "fix"
+      prefix-development: "chore"
+      include: "scope"
